...
        vc.present(alert, animated: true, completion: nil)
    }
    
    func deleteDocumentAlertDialog(vc : UIViewController, client: Client, fileNumber: FileNumber, documents: [Document], indexPath: IndexPath, completion: @escaping ((_ success: Bool) -> Void)) {
        
        let alert = UIAlertController(title: "Delete Document", message: "Would you like to delete this document?", preferredStyle: .alert)
        let deleteDocumentAction = UIAlertAction(title: "Delete", style: .default) { (action) in
            self.imageManager.deleteDocumentFromStorage(documents, indexPath) { (success) in
                if success {
                    self.dbm.deleteDocumentFromDatabase(client, fileNumber, documents, indexPath)
                    completion(true)
                } else {
                    print("Unable to delete document from storage")
...
